ci: support distro-dependent tests

--- a/test/charts/mocked_backend/templates/daemonset.yaml
+++ b/test/charts/mocked_backend/templates/daemonset.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: &app nr-otel-collector
+  name: &app nrdot-collector
   labels:
     app: *app
 spec:
