--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -1,6 +1,7 @@
 KIND_CLUSTER_NAME ?=e2etest
 K8S_CONTEXT_NAME=kind-${KIND_CLUSTER_NAME}
-IMAGE_REPO=newrelic/nr-otel-collector
+DISTRO ?=nr-otel-collector
+IMAGE_REPO=newrelic/${DISTRO}
 THIS_MAKEFILE_DIR := $(realpath $(dir $(realpath $(lastword $(MAKEFILE_LIST)))))
 ROOT_DIR := $(realpath $(THIS_MAKEFILE_DIR)/../..)
 
@@ -49,6 +50,7 @@ ci_test-nightly: ci_test
 ci_test:
 	cd ${THIS_MAKEFILE_DIR} && \
 	E2E_TEST__K8S_CONTEXT_NAME=${K8S_CONTEXT_NAME} \
+	E2E_TEST__DISTRO_TO_TEST=${DISTRO} \
 	E2E_TEST__IMAGE_TAG=${IMAGE_TAG} \
 	E2E_TEST__NR_BACKEND_URL=${NR_BACKEND_URL} \
 	E2E_TEST__NR_INGEST_KEY=${NR_INGEST_KEY} \
@@ -61,6 +63,8 @@ ci_test:
 ################
 #### LOCAL #####
 ################
+MOST_RECENT_IMAGE_TAG := $(shell docker images -a --filter 'reference=newrelic/${DISTRO}' '--format={{.CreatedAt}} {{.Tag}}' | sort -r | head -n1 | awk '{print $$NF}')
+
 .PHONY: local_create-cluster-if-not-exists
 local_create-cluster-if-not-exists:
 	kind get clusters | grep -q ${KIND_CLUSTER_NAME} \
@@ -70,18 +74,15 @@ local_create-cluster-if-not-exists:
 local_build-image:
 	cd $(ROOT_DIR) && goreleaser --snapshot --clean --skip=sign
 
-.PHONY: local_test
-# hardcode an image you build with local_build-image, then run this target to run tests against it
-local_test: IMAGE_TAG=insert_locally_available_tag_to_test_here
-local_test: local_create-cluster-if-not-exists ci_test
-
 .PHONY: local_test-fast
 local_test-fast: TEST_MODE=fastOnly
-local_test-fast: local_test
+local_test-fast: IMAGE_TAG=${MOST_RECENT_IMAGE_TAG}
+local_test-fast: local_create-cluster-if-not-exists ci_test-fast
 
 .PHONY: local_test-slow
 local_test-slow: TEST_MODE=slowOnly
-local_test-slow: local_test
+local_test-slow: IMAGE_TAG=${MOST_RECENT_IMAGE_TAG}
+local_test-slow: local_create-cluster-if-not-exists ci_test-slow
 
 .PHONY: local_helm-cleanup
 local_helm-cleanup:
