--- a/test/charts/nr_backend/Chart.yaml
+++ b/test/charts/nr_backend/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: nrdot-nr-backend
-description: A Helm chart for deploying nr-otel-collector as a DaemonSet writing to New Relic
+description: A Helm chart for deploying an nrdot collector as a DaemonSet writing to New Relic
 version: 0.1.0
 appVersion: "1.0"
