feat: add nrdot-collector-host distro

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ jobs:
       matrix:
         dist:
           - nr-otel-collector
+          - nrdot-collector-host
     steps:
       - name: Checkout
         uses: actions/checkout@v4
