--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ ci/terraform/caos.auto.tfvars
 *.auto.tfvars
 # rely on pinned provider versions for now to avoid having to deal with multi-platform lock file hashes
 .terraform.lock.hcl
+
+.env
+.secrets
+.input
+.tools
