--- a/distributions/nr-otel-collector/.goreleaser.yaml
+++ b/distributions/nr-otel-collector/.goreleaser.yaml
@@ -1,5 +1,5 @@
 version: 2
-project_name: nrdot-collector-releases-nightly
+project_name: nrdot-collector-releases
 builds:
   - id: nr-otel-collector
     goos:
@@ -75,8 +75,8 @@ dockers:
     goarch: amd64
     dockerfile: Dockerfile
     image_templates:
-      - '{{ .Env.REGISTRY }}/nr-otel-collector:{{ .Version }}-nightly-amd64'
-      - '{{ .Env.REGISTRY }}/nr-otel-collector:nightly-amd64'
+      - newrelic/nr-otel-collector:{{ .Version }}-amd64
+      - newrelic/nr-otel-collector:latest-amd64
     extra_files:
       - configs/nr-otel-collector-agent-linux.yaml
     build_flag_templates:
@@ -93,8 +93,8 @@ dockers:
     goarch: arm64
     dockerfile: Dockerfile
     image_templates:
-      - '{{ .Env.REGISTRY }}/nr-otel-collector:{{ .Version }}-nightly-arm64'
-      - '{{ .Env.REGISTRY }}/nr-otel-collector:nightly-arm64'
+      - newrelic/nr-otel-collector:{{ .Version }}-arm64
+      - newrelic/nr-otel-collector:latest-arm64
     extra_files:
       - configs/nr-otel-collector-agent-linux.yaml
     build_flag_templates:
@@ -108,15 +108,19 @@ dockers:
       - --label=org.opencontainers.image.licenses=Apache-2.0
     use: buildx
 docker_manifests:
-  - name_template: '{{ .Env.REGISTRY }}/nr-otel-collector:nightly'
+  - name_template: newrelic/nr-otel-collector:{{ .Version }}
     image_templates:
-      - '{{ .Env.REGISTRY }}/nr-otel-collector:nightly-amd64'
-      - '{{ .Env.REGISTRY }}/nr-otel-collector:nightly-arm64'
+      - newrelic/nr-otel-collector:{{ .Version }}-amd64
+      - newrelic/nr-otel-collector:{{ .Version }}-arm64
+  - name_template: newrelic/nr-otel-collector:latest
+    image_templates:
+      - newrelic/nr-otel-collector:latest-amd64
+      - newrelic/nr-otel-collector:latest-arm64
 blobs:
   - bucket: nr-releases
     provider: s3
     region: us-east-1
-    directory: nrdot-collector-releases/nr-otel-collector/nightly
+    directory: nrdot-collector-releases/nr-otel-collector/{{ .Version }}
 changelog:
   disable: "true"
 signs:
