--- a/distributions/nr-otel-collector/.goreleaser-nightly.yaml
+++ b/distributions/nr-otel-collector/.goreleaser-nightly.yaml
@@ -38,7 +38,7 @@ nfpms:
       - src: nr-otel-collector.conf
         dst: /etc/nr-otel-collector/nr-otel-collector.conf
         type: config|noreplace
-      - src: configs/nr-otel-collector-agent-linux.yaml
+      - src: config.yaml
         dst: /etc/nr-otel-collector/config.yaml
         type: config
     scripts:
@@ -78,7 +78,7 @@ dockers:
       - '{{ .Env.REGISTRY }}/nr-otel-collector:{{ .Version }}-nightly-amd64'
       - '{{ .Env.REGISTRY }}/nr-otel-collector:nightly-amd64'
     extra_files:
-      - configs/nr-otel-collector-agent-linux.yaml
+      - config.yaml
     build_flag_templates:
       - --pull
       - --platform=linux/amd64
@@ -96,7 +96,7 @@ dockers:
       - '{{ .Env.REGISTRY }}/nr-otel-collector:{{ .Version }}-nightly-arm64'
       - '{{ .Env.REGISTRY }}/nr-otel-collector:nightly-arm64'
     extra_files:
-      - configs/nr-otel-collector-agent-linux.yaml
+      - config.yaml
     build_flag_templates:
       - --pull
       - --platform=linux/arm64
