--- a/distributions/nr-otel-collector/.goreleaser.yaml
+++ b/distributions/nr-otel-collector/.goreleaser.yaml
@@ -38,7 +38,7 @@ nfpms:
       - src: nr-otel-collector.conf
         dst: /etc/nr-otel-collector/nr-otel-collector.conf
         type: config|noreplace
-      - src: configs/nr-otel-collector-agent-linux.yaml
+      - src: config.yaml
         dst: /etc/nr-otel-collector/config.yaml
         type: config
     scripts:
@@ -78,7 +78,7 @@ dockers:
       - newrelic/nr-otel-collector:{{ .Version }}-amd64
       - newrelic/nr-otel-collector:latest-amd64
     extra_files:
-      - configs/nr-otel-collector-agent-linux.yaml
+      - config.yaml
     build_flag_templates:
       - --pull
       - --platform=linux/amd64
@@ -96,7 +96,7 @@ dockers:
       - newrelic/nr-otel-collector:{{ .Version }}-arm64
       - newrelic/nr-otel-collector:latest-arm64
     extra_files:
-      - configs/nr-otel-collector-agent-linux.yaml
+      - config.yaml
     build_flag_templates:
       - --pull
       - --platform=linux/arm64
