--- a/distributions/nrdot-collector-k8s/manifest.yaml
+++ b/distributions/nrdot-collector-k8s/manifest.yaml
@@ -6,18 +6,14 @@ dist:
   output_path: ./_build
 
 receivers:
-  # shared
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/prometheusreceiver v0.118.0
-  # daemonset-only
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/filelogreceiver v0.118.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/hostmetricsreceiver v0.118.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/kubeletstatsreceiver v0.118.0
-  # deployment-only
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/k8seventsreceiver v0.118.0
-  - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.118.0 # only in commented out gateway pipeline but useful for piping
+  - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.118.0
 
 processors:
-  # shared
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/attributesprocessor v0.118.0
   - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.118.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/cumulativetodeltaprocessor v0.118.0
@@ -28,17 +24,16 @@ processors:
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/resourcedetectionprocessor v0.118.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/resourceprocessor v0.118.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/transformprocessor v0.118.0
-  # deployment-only
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/groupbyattrsprocessor v0.118.0
 
 exporters:
   # shared
-  - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.118.0 # added
-  - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.118.0 # added
+  - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.118.0
+  - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.118.0
   - gomod: go.opentelemetry.io/collector/exporter/otlphttpexporter v0.118.0
 
 extensions:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/healthcheckextension v0.118.0 # added
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/healthcheckextension v0.118.0
 # When adding a replace, add a comment before it to document why it's needed and when it can be removed
 replaces:
   ### Transitive deps determined via `go mod graph | grep $dep@$dep_replace_version`
