--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,7 @@ jobs:
 
       - name: Login to Docker
         uses: docker/login-action@v3
+        if: ${{ env.ACT }}
         with:
           registry: docker.io
           username: ${{ secrets.OTELCOMM_DOCKER_HUB_USERNAME }}
