--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,4 +1,4 @@
-name: . 🕵🏼 Security scanner
+name: 🔍 Security scanner
 on:
   schedule:
     # Scheduled to run in the morning (PT) on every day-of-week from Monday through Friday.
