--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -1,7 +1,7 @@
 KIND_CLUSTER_NAME ?=e2etest
 K8S_CONTEXT_NAME=kind-${KIND_CLUSTER_NAME}
 DISTRO ?=nr-otel-collector
-IMAGE_REPO=newrelic/${DISTRO}
+IMAGE_REPO ?=newrelic/${DISTRO}
 THIS_MAKEFILE_DIR := $(realpath $(dir $(realpath $(lastword $(MAKEFILE_LIST)))))
 ROOT_DIR := $(realpath $(THIS_MAKEFILE_DIR)/../..)
 
