--- a/distributions/nr-otel-collector/manifest.yaml
+++ b/distributions/nr-otel-collector/manifest.yaml
@@ -1,7 +1,7 @@
 dist:
   module: github.com/newrelic/opentelemetry-collector-releases/nr-otel-collector
   name: nr-otel-collector
-  description: New Relic OpenTelemetry Collector
+  description: NRDOT Collector Legacy
   version: 0.8.10
   output_path: ./_build
 
