--- a/.github/workflows/ci-nightly.yaml
+++ b/.github/workflows/ci-nightly.yaml
@@ -12,11 +12,11 @@ on:
     - cron: '0 15 * * 1-5'
 
 env:
-  TEST_CLUSTER_NAME: ci-e2etest-nightly
-  REGISTRY: ${{ secrets.OTELCOMM_AWS_TEST_ACC_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
+  REGISTRY: '${{ secrets.OTELCOMM_AWS_TEST_ACC_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com'
 
 jobs:
-  build-nightly:
+  build:
+    name: Build & Validate
     strategy:
       matrix:
         distribution:
@@ -38,74 +38,92 @@ jobs:
       nr_api_base_url: ${{ secrets.NR_STAGING_API_BASE_URL }}
       nr_api_key: ${{ secrets.OTELCOMM_NR_API_KEY }}
 
-  publish-nightly:
+  publish:
+    name: Build & Publish Nightly
     runs-on: ubuntu-latest
-    needs: build-nightly
+    needs: build
     strategy:
       matrix:
         distribution:
           - nr-otel-collector
     steps:
-      - uses: actions/download-artifact@v4.1.8
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          pattern: artifacts-${{ inputs.distribution }}-*
-          path: distributions/${{ inputs.distribution }}/dist
-          merge-multiple: true
+          fetch-depth: 0 # required for tag metadata
 
-      - name: Display structure of downloaded files
-        run: ls -R distributions/${{ inputs.distribution }}/dist
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+          check-latest: true
 
-#      - name: Configure AWS Credentials
-#        uses: aws-actions/configure-aws-credentials@v4
-#        with:
-#          aws-access-key-id: ${{ secrets.OTELCOMM_AWS_TEST_ACC_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.OTELCOMM_AWS_TEST_ACC_SECRET_ACCESS_KEY }}
-#          aws-region: us-east-1
-#          role-to-assume: arn:aws:iam::${{ secrets.OTELCOMM_AWS_TEST_ACC_ACCOUNT_ID }}:role/resource-provisioner
-#          role-skip-session-tagging: true
-#
-#      - name: Login to ECR
-#        uses: docker/login-action@v3
-#        with:
-#          registry: ${{ secrets.OTELCOMM_AWS_TEST_ACC_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.distribution }}
-#
-#      - uses: docker/setup-qemu-action@v2
-#
-#      - uses: docker/setup-buildx-action@v2
-#
-#      - name: Import GPG key
-#        id: import_gpg
-#        uses: crazy-max/ghaction-import-gpg@v6
-#        with:
-#          gpg_private_key: ${{ secrets.gpg_private_key }}
-#          passphrase: ${{ secrets.gpg_passphrase }}
-#
-#      - name: Write GPG to path in memory for signing rpm/deb
-#        id: write_gpg_to_path
-#        run: |
-#          GPG_KEY_PATH="$(mktemp /dev/shm/gpg.XXXXXX)"
-#          echo "$GPG_PRIVATE_KEY" | base64 -d >> "$GPG_KEY_PATH"
-#          echo "gpg_key_path=$GPG_KEY_PATH" >> $GITHUB_OUTPUT
-#        env:
-#          GPG_PRIVATE_KEY: ${{ secrets.gpg_private_key }}
-#
-#      - name: Build and publish nightly binaries & packages with GoReleaser
-#        uses: goreleaser/goreleaser-action@v6
-#        env:
-#          NFPM_PASSPHRASE: ${{ secrets.OHAI_GPG_PASSPHRASE }}
-#          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
-#          GPG_KEY_PATH: ${{ steps.write_gpg_to_path.outputs.gpg_key_path }}
-#        with:
-#          distribution: goreleaser
-#          version: '~> v2'
-#          args: --skip=announce,validate --clean --timeout 2h --config .goreleaser-nightly.yaml
-#          workdir: distributions/${{ matrix.distribution }}
-#
-#      - name: Run nightly tests
-#        run: |
-#          NR_API_KEY=${{ secrets.OTELCOMM_NR_API_KEY }} \
-#          NR_ACCOUNT_ID=${{ secrets.OTELCOMM_NR_TEST_ACCOUNT_ID }} \
-#          NR_API_BASE_URL=${{ secrets.NR_STAGING_API_BASE_URL }} \
-#          DISTRO=${{ matrix.distribution }} \
-#          make -f ./test/e2e/Makefile ci_test-nightly
+      - name: Tidy go.mod files
+        run: go mod tidy
 
+      - name: Verify build
+        run: make ci DISTRIBUTIONS=${{ matrix.distribution }}
+
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        if: ${{ env.ACT }}
+        with:
+          registry: docker.io
+          username: ${{ secrets.OTELCOMM_DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.OTELCOMM_DOCKER_HUB_PASSWORD }}
+
+      - uses: docker/setup-qemu-action@v2
+
+      - uses: docker/setup-buildx-action@v2
+
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v6
+        with:
+          gpg_private_key: ${{ secrets.OHAI_GPG_PRIVATE_KEY_BASE64 }}
+          passphrase: ${{ secrets.OHAI_GPG_PASSPHRASE }}
+
+      - name: Write GPG to path in memory for signing rpm/deb
+        id: write_gpg_to_path
+        run: |
+          GPG_KEY_PATH="$(mktemp /dev/shm/gpg.XXXXXX)"
+          echo "$GPG_PRIVATE_KEY" | base64 -d >> "$GPG_KEY_PATH"
+          echo "gpg_key_path=$GPG_KEY_PATH" >> $GITHUB_OUTPUT
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.OHAI_GPG_PRIVATE_KEY_BASE64 }}
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.OTELCOMM_AWS_TEST_ACC_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.OTELCOMM_AWS_TEST_ACC_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::${{ secrets.OTELCOMM_AWS_TEST_ACC_ACCOUNT_ID }}:role/resource-provisioner
+          role-skip-session-tagging: true
+
+      - name: Login to ECR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY}}/${{ matrix.distribution }}
+
+      - name: Build and publish ${{ matrix.distribution }} nightly binaries & packages with GoReleaser
+        if: ${{ !env.ACT }}
+        uses: goreleaser/goreleaser-action@v6
+        env:
+          NFPM_PASSPHRASE: ${{ secrets.OHAI_GPG_PASSPHRASE }}
+          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
+          GPG_KEY_PATH: ${{ steps.write_gpg_to_path.outputs.gpg_key_path }}
+          REGISTRY: ${{ env.REGISTRY }}
+        with:
+          distribution: goreleaser
+          version: '~> v2'
+          args: --skip=announce,validate --clean --timeout 2h --config .goreleaser-nightly.yaml
+          workdir: distributions/${{ matrix.distribution }}
+
+      - name: Run nightly tests for ${{ matrix.distribution }}
+        run: |
+          NR_API_KEY=${{ secrets.OTELCOMM_NR_API_KEY }} \
+          NR_ACCOUNT_ID=${{ secrets.OTELCOMM_NR_TEST_ACCOUNT_ID }} \
+          NR_API_BASE_URL=${{ secrets.NR_STAGING_API_BASE_URL }} \
+          DISTRO=${{ matrix.distribution }} \
+          make -f ./test/e2e/Makefile ci_test-nightly
